7.ingress/80.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
# HTTPSを強制する際は以下の設定を有効とする
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ingress.allow-http: "false" # ここの行を追加するとhttps強制できる
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - k8s-example1.co.jp
# HTTPSの場合はsecretNameを指定(k8sへ登録した証明書の名称を指定する)
#    secretName: example1.co.jp
  - hosts:
    - k8s-example2.co.jp
# HTTPSの場合はsecretNameを指定(k8sへ登録した証明書の名称を指定する)
#    secretName: example2.co.jp
  rules:
  - host: k8s-example1.co.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: apache-sv
          servicePort: 8080
# HTTPSの場合は443を指定する
#          servicePort: 443
  - host: k8s-example2.co.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: apache-sv
          servicePort: 8080
# HTTPSの場合は443を指定する
#          servicePort: 443
